--- a/main.css
+++ b/main.css
@@ -3,42 +3,49 @@
 
 * {
     font-family: 'Noto Sans JP', sans-serif;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .navbar {
     list-style-type: none;
     background-color:#4d4d4d;
     overflow: hidden;
-    display: block;
+    display: flex;
+    justify-content: center;
+    margin: 0;
   }
   
 
   .navbar a {
-    float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 80px 14px 140px;
+    padding: 14px 80px 14px 80px;
     text-decoration: none;
     font-size: 17px;
+    margin: 0;
   }
   
   /* Change the color of links on hover */
   .navbar a:hover {
     background-color: #ddd;
     color: black;
+    margin: 0;
   }
   
   /* Add a color to the active/current link */
   .navbar a:active {
     background-color: #4CAF50;
     color: white;
+    margin: 0;
   }
 
 h1 {
     background-color:#4d4d4d;
     color:white;
     text-align:center;
-    padding-top: 15px;}
+    padding-top: 15px;
+    padding-bottom: 10px ;}
     
 
 h2 { background-image: url("plants.jpg");
